模型去成交量重训+加入30天趋势线
